--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/graphql": "^7.10.6",
     "@nestjs/platform-express": "^7.6.15",
+    "@prisma/client": "^2.21.2",
     "apollo-server-express": "^2.24.0",
     "env-cmd": "^10.1.0",
     "graphql": "^15.5.0",
@@ -48,6 +49,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "prisma": "2.21.2",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
