--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "env-cmd": "^10.1.0",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.4",
+    "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
@@ -41,6 +43,7 @@
     "@nestjs/testing": "^7.6.15",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.36",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
