--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.36",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
