create seePost mutation

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjsx/api-version": "^0.1.1",
     "@prisma/client": "^2.21.2",
+    "apollo-log": "^1.0.1",
     "apollo-server-express": "^2.24.0",
+    "apollo-server-plugin-operation-registry": "^0.10.0",
     "env-cmd": "^10.1.0",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.4",
